# SimulacionFreedomMachines

./: .gitignore  README.md  a_estrella.py  pyproject.toml
base/: pyproject.toml
base/src/base/: __init__.py  cli.py  runner.py  strategy.py
baseline/: visualiza_simulacion.py
config/: default.yaml  pyproject.toml
config/src/config/: __init__.py  settings.py
core/: pyproject.toml
core/src/core/: __init__.py  entities.py  grid.py  layout_generator.py  order_generator.py  pathfinding.py  reservation.py  simulator.py  types.py
moop/: pyproject.toml
moop/src/moop/: __init__.py  cli.py  config.py  evaluator.py  optimizer.py  problem.py
moop/src/moop/gpu/: __init__.py  buffers.py  evaluator.py
moop/src/moop/gpu/shaders/: sim.wgsl
moop/src/moop/tui/: __init__.py  app.py  screens.py  widgets.py
notebooks/: entregable3_analisis.ipynb  entregable4_analisis.ipynb  pyproject.toml
render/: pyproject.toml
render/src/render/: __init__.py  visualizer.py
