[project]
name = "base"
version = "0.1.0"
description = "Greedy strategy for multi-robot warehouse simulation"
requires-python = ">=3.11"
dependencies = [
    "core",
    "config",
    "render",
    "typer>=0.12",
    "rich>=13.0",
    "textual>=0.50",
    "structlog>=24.0",
]

[project.scripts]
base = "base.cli:app"

[tool.uv.sources]
core = { workspace = true }
config = { workspace = true }
render = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base"]
