[project]
name = "config"
version = "0.1.0"
description = "Configuration management for Freedom Machines simulation"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config"]
