[project]
name = "core"
version = "0.1.0"
description = "Simulation framework for multi-robot warehouse (CEDIS)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "config",
]

[tool.uv.sources]
config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
