[project]
name = "moop"
version = "0.1.0"
description = "Multi-objective optimization for warehouse simulation parameters"
requires-python = ">=3.11"
dependencies = [
    "core",
    "base",
    "config",
    "pymoo>=0.6",
    "typer>=0.12",
    "rich>=13.0",
    "textual>=0.50",
    "pyyaml>=6.0",
    "wgpu>=0.20",
]

[project.scripts]
moop = "moop.cli:app"

[tool.uv.sources]
core = { workspace = true }
base = { workspace = true }
config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moop"]
