[project]
name = "render"
version = "0.1.0"
description = "Visualization library for multi-robot warehouse simulation"
requires-python = ">=3.11"
dependencies = [
    "core",
    "config",
    "matplotlib>=3.7",
]

[tool.uv.sources]
core = { workspace = true }
config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/render"]
